# PointOne_TakeHome

./: .env.example  .gitignore  README.md  environment.yml  example-env  pyproject.toml  requirements.txt
app/: db.py  embedding.py  llm_hydration.py  main.py  matters_schema.sql  ollama_rationale.py  schemas.py  seed_matters.py  suggestions.py
data/: matters.json
docs/: MATTERS_INDEX.md  PGVECTOR_SETUP.md  SUGGESTIONS_SCORING.md
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_api.py  test_db.py  test_embedding.py  test_ollama_rationale.py  test_schemas.py  test_seed_matters.py  test_suggestions.py
