[project]
name = "pointone"
version = "0.1.0"
description = "Client/matter suggestion API for time entry classification"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = ["ignore:.*"]
